tests/build/widget/property_already_captured_inherited1.stderr
error: property `id` is already captured in inherited fn `new_child`
 --> $DIR/property_already_captured_inherited1.rs:3:1
  |
3 | #[widget($crate::test_widget)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
